<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presenter.AddBusinessCardActivity">

    <ImageButton
        android:id="@+id/ib_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="@color/white"
        android:src="@drawable/ic_cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_newcard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Novo Cartão"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ib_cancel" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_nome"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="12dp"
        android:hint="Nome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_newcard">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="12dp"
        android:hint="Email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ti_nome">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_telefone"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="12dp"
        android:hint="Telefone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ti_email">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_empresa"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="12dp"
        android:hint="Nome da Empresa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ti_telefone">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_color_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Cor do Cartão"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ti_empresa" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mb_color_white"
        android:backgroundTint="@color/white"
        android:text="@string/branco"
        app:layout_constraintStart_toStartOf="@id/ti_empresa"
        app:layout_constraintTop_toBottomOf="@+id/tv_color_card"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp"
        style="@style/colorStyle"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mb_color_yellow"
        android:layout_marginHorizontal="6dp"
        android:backgroundTint="#FFEB3B"
        android:text="@string/amarelo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_color_card"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp"
        style="@style/colorStyle"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mb_color_lilac"
        android:backgroundTint="#C3A2FF"
        android:text="Lilás"
        app:layout_constraintEnd_toEndOf="@id/ti_empresa"
        app:layout_constraintTop_toBottomOf="@+id/tv_color_card"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp"
        style="@style/colorStyle"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mb_color_blue"
        android:layout_marginTop="6dp"
        android:backgroundTint="#6EEFFF"
        android:text="@string/azul"
        app:layout_constraintStart_toStartOf="@id/mb_color_white"
        app:layout_constraintTop_toBottomOf="@+id/mb_color_white"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp"
        style="@style/colorStyle"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mb_color_red"
        android:layout_marginTop="6dp"
        android:backgroundTint="#FFAAC7"
        android:text="@string/vermelho"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mb_color_yellow"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp"
        style="@style/colorStyle"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mb_color_green"
        android:layout_marginTop="6dp"
        android:backgroundTint="#A7FFAA"
        android:text="@string/verde"
        app:layout_constraintEnd_toEndOf="@id/mb_color_lilac"
        app:layout_constraintTop_toBottomOf="@+id/mb_color_lilac"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp"
        style="@style/colorStyle"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mb_salvar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="@color/black"
        android:text="@string/salvar"
        android:textSize="18sp"
        android:paddingVertical="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mb_color_red" />
</androidx.constraintlayout.widget.ConstraintLayout>